--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,17 @@ dependencies:
     sdk: flutter
   logger: ^1.1.0
   provider: ^6.0.1
+  retrofit: ^3.0.0
   surf_logger: ^1.0.1
 
 dev_dependencies:
+  build_runner: ^2.1.5
   dart_code_metrics: ^4.7.0
   elementary_test: ^0.1.2
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.1.1
+  retrofit_generator: ^3.0.0
   surf_lint_rules: ^1.4.1
 
 environment:
