Written README.md. Changed the typing of the DebugScreen from DebugScreenWidgetModel to IDebugScreenWidgetModel. Added required folders. Changed project structure.

--- a/android/keystore/keystoreConfig.gradle
+++ b/android/keystore/keystoreConfig.gradle
@@ -1,7 +1,7 @@
 ext {
     def releaseKeystorePropsFile = rootProject.file("keystore/keystore_release.properties")
     if (releaseKeystorePropsFile.exists()) {
-        println "Start extract release keystore config.dart from keystore_release.properties"
+        println "Start extract release keystore app_config.dart from keystore_release.properties"
         def keystoreProps = new Properties()
         keystoreProps.load(new FileInputStream(releaseKeystorePropsFile))
         keystoreConfig = [
@@ -11,7 +11,7 @@ ext {
                 storeFile    : keystoreProps['storeFile']
         ]
     } else {
-        println "Start extract release keystore config.dart from global vars"
+        println "Start extract release keystore app_config.dart from global vars"
         keystoreConfig = [
                 storePassword: System.getenv('storePassword'),
                 keyPassword  : System.getenv('keyPassword'),
@@ -22,5 +22,5 @@ ext {
     if(!keystoreConfig.storeFile) {
         keystoreConfig.storeFile = "no_keystore_file" //fix crash file(storeFile)
     }
-    println "Extracted keystore config.dart: $keystoreConfig"
+    println "Extracted keystore app_config.dart: $keystoreConfig"
 }
