--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,7 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config.dart for the release build.
+            // TODO: Add your own signing app_config.dart for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
