--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,26 +4,27 @@ description: a Flutter template project for development.
 publish_to: none
 
 dependencies:
-  dio: ^4.0.4
-  elementary: ^1.0.0
-  firebase_crashlytics: ^2.3.0
+  dio: ^4.0.6
+  elementary: ^1.3.0
+  firebase_crashlytics: ^2.7.2
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  go_router: ^3.1.0
   logger: ^1.1.0
   provider: ^6.0.2
-  retrofit: ^3.0.0
-  surf_logger: ^1.0.2
+  retrofit: ^3.0.1+1
+  surf_logger: ^1.1.0
 
 dev_dependencies:
-  build_runner: ^2.1.8
-  dart_code_metrics: ^4.7.0
-  elementary_test: ^1.0.1
+  build_runner: ^2.1.10
+  dart_code_metrics: ^4.15.1
+  elementary_test: ^1.1.1
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.1.5
-  retrofit_generator: ^3.0.0
+  json_serializable: ^6.2.0
+  retrofit_generator: ^4.0.1
   surf_lint_rules: ^1.5.0
 
 environment:
