--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# FVM cache of the selected version.
+.fvm/flutter_sdk
