--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,22 +5,22 @@ publish_to: none
 
 dependencies:
   dio: ^4.0.6
-  elementary: ^1.3.0
-  firebase_crashlytics: ^2.7.2
+  elementary: ^1.3.1
+  firebase_crashlytics: ^2.8.4
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  go_router: ^3.1.0
+  go_router: ^4.1.0
   logger: ^1.1.0
-  provider: ^6.0.2
+  provider: ^6.0.3
   retrofit: ^3.0.1+1
   surf_logger: ^1.1.0
 
 dev_dependencies:
-  build_runner: ^2.1.10
-  dart_code_metrics: ^4.15.1
-  elementary_test: ^1.1.1
+  build_runner: ^2.1.11
+  dart_code_metrics: ^4.16.0
+  elementary_test: ^1.1.2
   flutter_test:
     sdk: flutter
   json_serializable: ^6.2.0
@@ -28,7 +28,8 @@ dev_dependencies:
   surf_lint_rules: ^1.5.0
 
 environment:
-  sdk: ">=2.14.0-0 <3.0.0"
+  sdk: ">=2.17.5 <3.0.0"
+  flutter: ">=3.0.0"
 
 flutter:
   uses-material-design: true
