(SNP-21): add generated files to analyzer exclude rule (SNP-21): update and fix package's version for max (SNP-21): update auto_route package (SNP-21): fix lint hint in pubspec.yaml (SNP-21): fix error after update elementary package

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,3 +13,8 @@ dart_code_metrics:
 linter:
   rules:
     public_member_api_docs: true
+
+analyzer:
+  exclude:
+    - lib/**/*.g.dart
+    - lib/**/*.gr.dart
