--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,29 +4,29 @@ description: a Flutter template project for development.
 publish_to: none
 
 dependencies:
-  dio: ^4.0.6
-  elementary: ^1.3.0
-  firebase_crashlytics: ^2.7.2
+  auto_route: 5.0.1
+  dio: 4.0.6
+  elementary: 1.5.0
+  firebase_crashlytics: 2.8.10
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  auto_route: ^4.2.1
-  logger: ^1.1.0
-  provider: ^6.0.2
-  retrofit: ^3.0.1+1
-  surf_logger: ^1.1.0
+  logger: 1.1.0
+  provider: 6.0.3
+  retrofit: 3.0.1+1
+  surf_logger: 1.1.0
 
 dev_dependencies:
-  build_runner: ^2.1.10
-  dart_code_metrics: ^4.15.1
-  elementary_test: ^1.1.1
+  auto_route_generator: 5.0.2
+  build_runner: 2.2.0
+  dart_code_metrics: 4.18.1
+  elementary_test: 1.1.2
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.2.0
-  retrofit_generator: ^4.0.1
-  surf_lint_rules: ^1.5.0
-  auto_route_generator: ^4.2.0
+  json_serializable: 6.3.1
+  retrofit_generator: 4.0.3+1
+  surf_lint_rules: 1.5.0
 
 environment:
   sdk: ">=2.14.0-0 <3.0.0"
