--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   logger: 1.1.0
   provider: 6.0.3
   retrofit: 3.0.1+1
+  shared_preferences: ^2.0.15
   surf_logger: 1.1.0
 
 dev_dependencies:
