SNP-31: add path_provider package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   logger: 1.1.0
+  path_provider: 2.0.11
   provider: 6.0.3
   retrofit: 3.0.1+1
   shared_preferences: 2.0.15
