SNP-25: update proxy: remove default proxy urls, add saving to shared prefs, use proxy from storage in debug mode (#20)
* (SNP-21): add generated files to analyzer exclude rule
(SNP-21): update and fix package's version for max
(SNP-21): update auto_route package
(SNP-21): fix lint hint in pubspec.yaml
(SNP-21): fix error after update elementary package

* SNP-21: update temp routes for show temp screen first

* SNP-21: added config for vscode

* SNP-21: added config for intellij idea

* added two new screens for example

* SNP-23: refactoring routes, screens for example

* SNP-23: separate screens for debug and release mode, add debug screen for showing in debug mode

* SNP-24: remove diagnostic menu from the screen, remove DebugOptions

* SNP-23: refactoring temp screen view

* SNP-25: added shared_preferences package

* SNP-25: remove default proxy urls, add saving for proxy in shared prefs, use proxy from storage in debug mode

* SNP-25: fix package version

* SNP-25: update packages

* SNP-25: change type AppConfig to <T> for Environment

* SNP-23: add generated files to gitignore

* SNP-23: change home route to temp route

* SNP-25: remove create method for app scope, remove shared prefs from app scope

* refactoring imports

* add check for config type

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,18 @@ dependencies:
   logger: 1.1.0
   provider: 6.0.3
   retrofit: 3.0.1+1
+  shared_preferences: 2.0.15
   surf_logger: 1.1.0
 
 dev_dependencies:
   auto_route_generator: 5.0.2
-  build_runner: 2.2.0
-  dart_code_metrics: 4.18.1
+  build_runner: 2.2.1
+  dart_code_metrics: 4.18.3
   elementary_test: 1.1.2
   flutter_test:
     sdk: flutter
-  json_serializable: 6.3.1
-  retrofit_generator: 4.0.3+1
+  json_serializable: 6.3.2
+  retrofit_generator: 4.0.3+2
   surf_lint_rules: 1.5.0
 
 environment:
