--- a/ios/Runner/Firebase/prod/GoogleService-Info.plist
+++ b/ios/Runner/Firebase/prod/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>ru.surfstudio.flutterTemplate</string>
+	<string>dev.surf.flutter_template</string>
 	<key>PROJECT_ID</key>
 	<string>flutter-template-prod</string>
 	<key>STORAGE_BUCKET</key>
