BRI-30: added app theme service, app theme mode for dark and light theme, storage for save theme mode (#21)
* (SNP-21): add generated files to analyzer exclude rule
(SNP-21): update and fix package's version for max
(SNP-21): update auto_route package
(SNP-21): fix lint hint in pubspec.yaml
(SNP-21): fix error after update elementary package

* SNP-21: update temp routes for show temp screen first

* SNP-21: added config for vscode

* SNP-21: added config for intellij idea

* added two new screens for example

* SNP-23: refactoring routes, screens for example

* SNP-23: separate screens for debug and release mode, add debug screen for showing in debug mode

* SNP-24: remove diagnostic menu from the screen, remove DebugOptions

* SNP-23: refactoring temp screen view

* SNP-25: added shared_preferences package

* SNP-25: remove default proxy urls, add saving for proxy in shared prefs, use proxy from storage in debug mode

* SNP-30: add service and storage for app theme,

* SNP-30: add app theme data

* SNP-30: add theme service to the app scope, app widget

* SNP-30: refactoring screens widgets, add theme to the widget models

* SNP-25: fix package version

* SNP-25: update packages

* SNP-25: change type AppConfig to <T> for Environment

* SNP-23: add generated files to gitignore

* SNP-23: change home route to temp route

* SNP-23: replace abstract class for app color palette with enum

* SNP-30: refactoring: add exception for theme

* SNP-30: add ui for change theme mode

* SNP-30: refactoring

* SNP-30: add text theme extension

* SNP-25: remove create method for app scope, remove shared prefs from app scope

* BRI-31: add service for save log history to file and open history on the screen (#22)

* SNP-31: add path_provider package

* SNP-31: add service for log history

* SNP-31: add log history elementary module

* SNP-31: update routes

* SNP-31: add method for create strategy

* SNP-31: add ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   logger: 1.1.0
+  path_provider: 2.0.11
   provider: 6.0.3
   retrofit: 3.0.1+1
   shared_preferences: 2.0.15
@@ -30,7 +31,7 @@ dev_dependencies:
   surf_lint_rules: 1.5.0
 
 environment:
-  sdk: ">=2.14.0-0 <3.0.0"
+  sdk: ">=2.17.0-0 <3.0.0"
 
 flutter:
   uses-material-design: true
