--- a/cd.yaml
+++ b/cd.yaml
@@ -7,13 +7,11 @@ default:
     file_path: 'lib/main.dart'
     ios:
       build:
-        # Extension of the build file. Does not affect the build of the ios application. Always builds a signed ipa file.
-        extension: 'ipa'
         # Specify the flavor. Used in the application build command.
         flavor: 'dev'
         # Additional flags when building an application.
-        # Specify the path to the created exportOptions.plist in the value of "--export-options-plist" flag.
-        flags: '--export-options-plist ios/exportOptions.plist --release --tree-shake-icons --split-debug-info --obfuscate'
+        # Specify the path to the created exportOptions.plist in the value of "--export-options-plist" flag. This flag is required.
+        flags: '--export-options-plist ios/devExportOptions.plist --release --tree-shake-icons --split-debug-info --obfuscate'
         # Saving the build artifact in jenkins. Not used when building an ios application.
         save_to_jenkins: false
       deploy:
@@ -25,8 +23,6 @@ default:
         firebase: false
     android:
       build:
-        # Extension of the build file. Options: appbundle, apk.
-        extension: 'apk'
         # Specify the flavor. Used in the application build command.
         flavor: 'dev'
         # Additional flags when building an application.
@@ -41,19 +37,20 @@ default:
           firebase_app_id: ''
           # Testing Group.
           groups: ''
+        # Indicates the need to deploat in Google Play Console.
+        # To disable the deplot, specify "google_play: false" and delete the dictionary for this key.
+        google_play: false
   # Project environment. Specify when creating a tag. Example: "4.02.10-prod".
   prod:
     # The path to the entry point of the application.
     file_path: 'lib/main-release.dart'
     ios:
       build:
-        # Extension of the build file. Does not affect the build of the ios application. Always builds a signed ipa file.
-        extension: 'ipa'
         # Specify the flavor. Used in the application build command.
         flavor: 'prod'
         # Additional flags when building an application.
-        # Specify the path to the created exportOptions.plist in the value of "--export-options-plist" flag.
-        flags: '--export-options-plist ios/exportOptions.plist --release --tree-shake-icons --split-debug-info --obfuscate'
+        # Specify the path to the created exportOptions.plist in the value of "--export-options-plist" flag. This flag is required.
+        flags: '--export-options-plist ios/prodExportOptions.plist --release --tree-shake-icons --split-debug-info --obfuscate'
         # Saving the build artifact in jenkins. Not used when building an ios application.
         save_to_jenkins: false
       deploy:
@@ -69,8 +66,6 @@ default:
           groups: ''
     android:
       build:
-        # Extension of the build file. Options: appbundle, apk.
-        extension: 'apk'
         # Specify the flavor. Used in the application build command.
         flavor: 'prod'
         # Additional flags when building an application.
@@ -85,3 +80,8 @@ default:
           firebase_app_id: ''
           # Testing Group.
           groups: ''
+        # Indicates the need to deploat in Google Play Console.
+        # To disable the deplot, specify "google_play: false" and delete the dictionary for this key.
+        google_play:
+          # Application package name in Google Play Console.
+          package_name: ''
