--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,31 +4,31 @@ description: a Flutter template project for development.
 publish_to: none
 
 dependencies:
-  auto_route: 5.0.1
-  dio: 4.0.6
-  elementary: 1.5.0
-  firebase_crashlytics: 2.8.10
+  auto_route: 6.1.0
+  dio: 5.1.1
+  elementary: 2.0.0
+  firebase_crashlytics: 3.1.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  logger: 1.1.0
-  path_provider: 2.0.11
-  provider: 6.0.3
-  retrofit: 3.0.1+1
-  shared_preferences: 2.0.15
+  logger: 1.3.0
+  path_provider: 2.0.14
+  provider: 6.0.5
+  retrofit: 4.0.1
+  shared_preferences: 2.1.0
   surf_logger: 1.1.0
 
 dev_dependencies:
-  auto_route_generator: 5.0.2
-  build_runner: 2.2.1
-  dart_code_metrics: 4.18.3
-  elementary_test: 1.1.2
+  auto_route_generator: 6.1.0
+  build_runner: 2.3.3
+  dart_code_metrics: 5.7.2
+  elementary_test: 1.1.3
   flutter_test:
     sdk: flutter
-  json_serializable: 6.3.2
-  retrofit_generator: 4.0.3+2
-  surf_lint_rules: 1.5.0
+  json_serializable: 6.6.1
+  retrofit_generator: 6.0.0+1
+  surf_lint_rules: 2.1.0
 
 environment:
   sdk: ">=2.17.0-0 <3.0.0"
