--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl: 0.18.0
   logger: 1.3.0
   path_provider: 2.0.14
   provider: 6.0.5
@@ -35,6 +36,7 @@ environment:
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - assets/fonts/
     - assets/icons/
