--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   build_runner: 2.3.3
   dart_code_metrics: 5.7.2
   elementary_test: 1.1.3
+  flutter_native_splash: 2.3.1
   flutter_test:
     sdk: flutter
   json_serializable: 6.6.1
@@ -41,3 +42,20 @@ flutter:
     - assets/fonts/
     - assets/icons/
     - assets/images/
+
+# fvm flutter pub run flutter_native_splash:create
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/splash/4.0x/splash.png
+  color_dark: "#000000"
+  image_dark: assets/splash/4.0x/splash_dark.png
+  android_12:
+    color: "#FFFFFF"
+    icon_background_color: "#FFFFFF"
+    image: assets/splash/splash_android12.png
+    color_dark: "#000000"
+    icon_background_color_dark: "#000000"
+    image_dark: assets/splash/splash_dark_android12.png
+  android: true
+  ios: true
+  web: true
