--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,15 @@
             "type": "dart",
             "request": "launch",
             "program": "./test/"
+        },
+        {
+            "name": "Golden",
+            "request": "launch",
+            "type": "dart",
+            "codeLens": {
+              "for": ["run-test", "run-test-file"]
+            },
+            "args": ["--update-goldens"]
         }
     ]
 }
