--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dev_dependencies:
   elementary_test: 1.1.3
   flutter_test:
     sdk: flutter
+  golden_toolkit: 0.15.0
   json_serializable: 6.6.1
+  mocktail: 0.3.0
   retrofit_generator: 6.0.0+1
   surf_lint_rules: 2.1.0
 
