feat: add assets golden

--- a/spider.yaml
+++ b/spider.yaml
@@ -13,7 +13,7 @@ export: true
 use_part_of: true
 
 # Generates a variable that contains a list of all asset values.
-use_references_list: false
+use_references_list: true
 
 # Generates files with given ignore rules for file.
 # ignored_rules:
