fix: Fix using different images on iOS

--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -2,5 +2,7 @@
 #include "Generated.xcconfig"
 #include "common.xcconfig"
 
+app_suffix=-dev
 bundle_suffix=.dev
 IDENTIFIER=$(identifier)$(bundle_suffix)
+APP_ICON=$(app_icon)$(app_suffix)
