--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ publish_to: none
 
 dependencies:
   auto_route: 7.4.0
+  collection: ^1.17.1
   dio: 5.1.1
   elementary: 2.0.0
   firebase_crashlytics: 3.1.0
@@ -14,6 +15,7 @@ dependencies:
     sdk: flutter
   intl: 0.18.0
   logger: 1.3.0
+  path: ^1.8.3
   path_provider: 2.0.14
   provider: 6.0.5
   retrofit: 4.0.1
@@ -29,10 +31,12 @@ dev_dependencies:
     sdk: flutter
   json_serializable: 6.6.1
   retrofit_generator: 6.0.0+1
-  surf_lint_rules: 2.1.0
+  surf_lint_rules: 3.0.0
 
 environment:
-  sdk: ">=2.17.0-0 <3.0.0"
+    sdk: '>=3.0.5 <4.0.0'
+    flutter: ">=3.0.0"
+
 
 flutter:
   uses-material-design: true
