--- a/ios/Flutter/dev.xcconfig
+++ b/ios/Flutter/dev.xcconfig
@@ -2,7 +2,7 @@
 #include "Generated.xcconfig"
 #include "common.xcconfig"
 
-app_suffix=-dev
+app_icon_suffix=-dev
 bundle_suffix=.dev
 IDENTIFIER=$(identifier)$(bundle_suffix)
-APP_ICON=$(app_icon)$(app_suffix)
+APP_ICON=$(app_icon)$(app_icon_suffix)
