--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dev_dependencies:
   flutter_native_splash: 2.3.1
   flutter_test:
     sdk: flutter
+  golden_toolkit: 0.15.0
   json_serializable: 6.6.1
+  mocktail: 0.3.0
   retrofit_generator: 6.0.0+1
   spider: 4.2.1
   surf_lint_rules: 2.1.0
