--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 
 dependencies:
   auto_route: 7.4.0
-  collection: ^1.17.1
+  collection: 1.17.1
   dio: 5.1.1
   elementary: 2.0.0
   firebase_crashlytics: 3.1.0
@@ -37,7 +37,7 @@ dev_dependencies:
 
 environment:
     sdk: '>=3.0.5 <4.0.0'
-    flutter: ">=3.0.0"
+    flutter: 3.10.6
 
 
 flutter:
