--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   intl: 0.18.0
   logger: 1.3.0
-  path: ^1.8.3
+  path: 1.8.3
   path_provider: 2.0.14
   provider: 6.0.5
   retrofit: 4.0.1
