--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ publish_to: none
 
 dependencies:
   auto_route: 7.4.0
+  cached_network_image: 3.2.3
   collection: 1.17.1
   dio: 5.1.1
   elementary: 2.0.0
