--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   path_provider: 2.0.14
   provider: 6.0.5
   retrofit: 4.0.1
+  rxdart: 0.27.7
   shared_preferences: 2.1.0
   surf_logger: 1.1.0
 
