--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_secure_storage: 8.0.0
   intl: 0.18.0
   logger: 1.3.0
   path: 1.8.3
