--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: 8.0.0
   intl: 0.18.0
+  json_annotation: 4.8.1
   logger: 1.3.0
   path: 1.8.3
   path_provider: 2.0.14
