feat: Flutterfire instructions (#49)
* feat: add flutterfire cli readme

* refactor: rewrite for use with flavors

* docs: moved documentation to separate file

* docs: moved documentation to separate file

* docs: doc

* chore: pubspec.lock update

---------

Co-authored-by: Alex Martynov <martynov.alex@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   collection: 1.17.1
   dio: 5.1.1
   elementary: 2.0.0
+  firebase_core: 2.15.0
   firebase_crashlytics: 3.1.0
   flutter:
     sdk: flutter
