--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,19 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_secure_storage: 9.0.0
+  freezed: 2.4.6
+  freezed_annotation: 2.4.1
   intl: 0.18.0
   logger: 1.3.0
   path: 1.8.3
   path_provider: 2.0.14
   provider: 6.0.5
   retrofit: 4.0.1
+  rxdart: 0.27.7
   shared_preferences: 2.1.0
   surf_logger: 1.1.0
+  uuid: 4.2.1
 
 dev_dependencies:
   auto_route_generator: 7.1.1
