--- a/tools/bricks/screen/brick.yaml
+++ b/tools/bricks/screen/brick.yaml
@@ -7,7 +7,12 @@ environment:
   mason: ">=0.1.0-dev.51 <0.1.0"
 
 vars:
-  name:
+  feature_name:
+    type: string
+    description: Feature name
+    prompt: Enter name of feature for which you want to add a screen
+    default: Example
+  screen_name:
     type: string
     description: Screen name
     prompt: Enter name of screen
