--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,4 @@
+# Uncomment this line to define a global platform for your project
 platform :ios, '12.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
