feat: added last line in brick.yaml files

--- a/tools/bricks/feature/brick.yaml
+++ b/tools/bricks/feature/brick.yaml
@@ -11,5 +11,4 @@ vars:
     type: string
     description: Name of feature
     prompt: Enter name of feature
-    default: Example
-    
+    default: Example\n
