--- a/tools/bricks/feature/brick.yaml
+++ b/tools/bricks/feature/brick.yaml
@@ -11,4 +11,4 @@ vars:
     type: string
     description: Name of feature
     prompt: Enter name of feature
-    default: Example\n
+    default: Example
