(feat): add icon

--- a/flutter_launcher_icons-dev.yaml
+++ b/flutter_launcher_icons-dev.yaml
@@ -2,20 +2,20 @@ flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
   image_path_android: "assets/launcher_icon/icon_rectangle_dev.png"
-  image_path_ios: "assets/launcher_icon/icon_rectangle_dev.png"
+  image_path_ios: "assets/launcher_icon/icon_rectangle_dev_ios.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
-  adaptive_icon_background: "#FC3737"
+  adaptive_icon_background: "#00C2FF"
   adaptive_icon_foreground: "assets/launcher_icon/icon_foreground_dev.png"
   remove_alpha_ios: true
   web:
-    generate: false
-    image_path: "assets/launcher_icon/icon_rectangle_dev.png"
-    background_color: "#FC3737"
-    theme_color: "#FC3737"
+    generate: true
+    image_path: "assets/launcher_icon/icon_rectangle_dev_ios.png"
+    background_color: "#00C2FF"
+    theme_color: "#00C2FF"
   windows:
     generate: false
-    image_path: "assets/launcher_icon/icon_rectangle_dev.png"
+    image_path: "assets/launcher_icon/icon_rectangle_dev_ios.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: false
-    image_path: "assets/launcher_icon/icon_rectangle_dev.png"
+    image_path: "assets/launcher_icon/icon_rectangle_dev_ios.png"
