--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,15 +1,18 @@
 # fvm flutter pub run flutter_native_splash:create
+# after generation on ios, go to Info.plist and delete the changes
+# or disable fullscreen (and check Info.plist just in case)
 flutter_native_splash:
+  fullscreen: true
   color: "#FFFFFF"
-  image: assets/splash/4.0x/splash.png
-  color_dark: "#000000"
-  image_dark: assets/splash/4.0x/splash_dark.png
+  image: assets/splash/splash.png
+  color_dark: "#00C2FF"
+  image_dark: assets/splash/splash_dark.png
   android_12:
     color: "#FFFFFF"
-    icon_background_color: "#FFFFFF"
+#    icon_background_color: "#FFFFFF"
     image: assets/splash/splash_android12.png
-    color_dark: "#000000"
-    icon_background_color_dark: "#000000"
+    color_dark: "#00C2FF"
+#    icon_background_color_dark: "#000000"
     image_dark: assets/splash/splash_dark_android12.png
   android: true
   ios: true
