feat: Add mason (#63)
* feat: initialized mason

* feat: added feature brick

* feat: added screen brick

* feat: redesigned screen brick

* chore: removed extra line in .gitignore

* feat: added \n to end of last line in brick.yaml files

* chore: removed ignore: unused_field

* feat: added todo for better documentation

* feat: added dispose method to DiScope

* chore: cleanup

* chore: updated readme file

* feat: added hooks

* feat: deleted hooks

* fix: fixed scripts

* feat: added last line in brick.yaml files

* feat: added emply line in brick.yaml

* feat: added empty line in mason.yaml

* feat: added dispose for entry file

* Revert "feat: deleted hooks"

This reverts commit f9b7699c97d69fb18b1d998a98e733654920ad7a.

* feat: updated hooks

* feat: added macros

* feat: added empty line in pubspec.yaml files

* feat: added format script

* chore: mason hooks removed

* feat: added sh scripts/format.sh into scripts

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,9 @@
 
 # FVM cache of the selected version.
 .fvm/flutter_sdk
+
+# Mason
+mason-lock.json
+.mason
+tools/bricks/**/hooks/build
+tools/bricks/**/*.dill
