--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: none
 dependencies:
   analytics: 1.0.2
   auto_route: 7.8.4
-  cached_network_image: ^3.3.1
+  cached_network_image: 3.3.1
   collection: 1.18.0
   dio: 5.4.0
   elementary: 3.0.0
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^2.0.9
+  flutter_svg: 2.0.9
   intl: 0.18.1
   logger: 1.4.0
   path: 1.8.3
@@ -24,7 +24,7 @@ dependencies:
   provider: 6.1.1
   retrofit: 4.0.3
   shared_preferences: 2.2.2
-  shimmer: ^3.0.0
+  shimmer: 3.0.0
   surf_logger: 1.1.0
 
 dev_dependencies:
