--- a/spider.yaml
+++ b/spider.yaml
@@ -27,7 +27,7 @@ use_references_list: true
 #   file_name: my_fonts
 
 # Location where all the generated references will be stored
-package: assets/res
+package: uikit/res
 
 groups:
   - path: assets/images
