--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: 2.0.9
+  freezed_annotation: 2.4.1
   intl: 0.18.1
   logger: 1.4.0
   path: 1.9.0
@@ -36,6 +37,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   golden_toolkit: 0.15.0
+  json_annotation: 4.8.1
   json_serializable: 6.7.1
   mocktail: 1.0.3
   retrofit_generator: 8.0.6
