--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: 2.0.9
+  freezed: 2.4.7
   freezed_annotation: 2.4.1
   intl: 0.18.1
+  json_annotation: 4.8.1
   logger: 1.4.0
   path: 1.9.0
   path_provider: 2.1.2
@@ -27,6 +29,7 @@ dependencies:
   shared_preferences: 2.2.2
   shimmer: 3.0.0
   surf_logger: 1.1.0
+  union_state: 0.0.1
 
 dev_dependencies:
   auto_route_generator: 7.3.2
@@ -37,7 +40,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   golden_toolkit: 0.15.0
-  json_annotation: 4.8.1
   json_serializable: 6.7.1
   mocktail: 1.0.3
   retrofit_generator: 8.0.6
