(feat): add dependencies

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,3 +10,7 @@ analyzer:
     - lib/**/*.gr.dart
     - lib/assets/**
     - tools/bricks/**/__brick__/**
+
+dart_code_metrics:
+  extends:
+    - package:surf_dcm_presets/all.yaml
