--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 # FVM cache of the selected version.
+.fvm/
 .fvm/flutter_sdk
 
 # Mason
