--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,5 +1,5 @@
 arb-dir: lib/l10n
-template-arb-file: app_ru.arb
+template-arb-file: app_en.arb
 output-localization-file: app_localizations.g.dart
 output-dir: lib/l10n
 synthetic-package: false
