--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   flutter_svg: 2.0.9
   intl: 0.18.1
+  json_annotation: 4.8.1
   logger: 1.4.0
   path: 1.9.0
   path_provider: 2.1.2
