fix: fixed comments

--- a/tools/api_generator/dto_config.yaml
+++ b/tools/api_generator/dto_config.yaml
@@ -3,13 +3,13 @@ useNewNullableDeterminationStrategy: true
 templates:
   - type: model
     fileExtension: dart
-    nameSuffix: Data
+    nameSuffix: Dto
     fileNameCase: snakeCase
     templatePath: templates/retrofit_model.stencil
     destinationPath: ../../lib/api/data
   - type: enum
     fileExtension: dart
-    nameSuffix: Data
+    nameSuffix: Dto
     fileNameCase: snakeCase
-    templatePath: templates/enum_retrofit.stencil
+    templatePath: templates/retrofit_enum.stencil
     destinationPath: ../../lib/api/data
