--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: 2.0.9
+  freezed: 2.4.7
+  freezed_annotation: 2.4.1
   intl: 0.18.1
   json_annotation: 4.8.1
   logger: 1.4.0
