chore: add special analysis workflow

--- a/.github/workflows/publish_to_pub.yml
+++ b/.github/workflows/publish_to_pub.yml
@@ -23,7 +23,7 @@ jobs:
 
   analysis:
     needs: get_fvm_version
-    uses: surfstudio/flutter-ci-workflows/.github/workflows/analysis.yml@main
+    uses: ./.github/workflows/analysis.yml
     with:
       flutter-version: ${{ needs.get_fvm_version.outputs.flutter_version }}
 
