--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -48,7 +48,7 @@ jobs:
         run: flutter pub get
 
       - name: Generate files
-        run: flutter pub run build_runner build
+        run: flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: Run analyzer
         run: flutter analyze --fatal-warnings --fatal-infos .
