--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       flutter-version:
-        required: true
+        required: false
         type: string
 
 jobs:
