--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: 2.2.2
   shimmer: 3.0.0
   surf_logger: 2.0.0
+  surf_widget_test_composer: 0.0.2
 
 dev_dependencies:
   auto_route_generator: 7.3.2
