--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shimmer: 3.0.0
   surf_logger: 2.0.0
   surf_widget_test_composer: 0.0.2
+  union_state: 0.0.1
 
 dev_dependencies:
   auto_route_generator: 7.3.2
