--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: 2.0.9
   freezed: 2.4.7
   freezed_annotation: 2.4.1
+  fresh_dio: 0.4.1
   intl: 0.18.1
   json_annotation: 4.8.1
   logger: 1.4.0
