--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -1,9 +1,9 @@
-name: "Analysis"
+name: Analysis
 
 on:
   workflow_call:
     inputs:
-      flutter-version:
+      FLUTTER_VERSION:
         required: false
         type: string
 
@@ -33,13 +33,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Flutter with exact version
-        if: ${{ inputs.flutter-version != ''}}
+        if: ${{ inputs.FLUTTER_VERSION != ''}}
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ inputs.flutter-version }}
+          flutter-version: ${{ inputs.FLUTTER_VERSION }}
 
       - name: Install Flutter from Stable branch
-        if: ${{ inputs.flutter-version == ''}}
+        if: ${{ inputs.FLUTTER_VERSION == ''}}
         uses: subosito/flutter-action@v2
         with:
           channel: "stable"
