--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_crashlytics: 3.4.9
   flutter:
     sdk: flutter
+  flutter_easy_dialogs: 3.2.0
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: 9.0.0
